--- a/prospera/src/Components/ChatbotPage/ChatbotPage.css
+++ b/prospera/src/Components/ChatbotPage/ChatbotPage.css
@@ -70,6 +70,8 @@
     margin-top: 0;
     border-bottom: 2px solid #4a148c; /* Dark purple underline */
     padding-bottom: 10px;
+    font-family: 'Playfair Display';
+    font-weight: 700;
 }
 
 .messageContainer {
