--- a/prospera/src/Components/LandingPage/LandingPage.css
+++ b/prospera/src/Components/LandingPage/LandingPage.css
@@ -37,7 +37,7 @@
 .landingPageContent h1 {
     font-size: 2.8rem;
     font-weight: bold;
-    margin: 5.5rem 1rem 0 1rem;
+    margin: 3rem 1rem 0 1rem;
     line-height: 1.2;
     color: #fff;
     text-align: center;
@@ -54,7 +54,7 @@
     z-index: 10;
     margin: 6px;
     font-weight: 600;
-    font-family: 'Manrope';
+    font-size: 1.5rem;
 }   
 
 .landingImg {
