--- a/prospera/src/Components/LandingPage/LandingPage.css
+++ b/prospera/src/Components/LandingPage/LandingPage.css
@@ -1,4 +1,3 @@
-/* General styles */
 .landingPageContent {
     position: relative;
     text-align: center;
@@ -99,7 +98,6 @@
     }
 }
 
-/* Card styles */
 .landingCardContainer {
     position: relative;
     display: flex;
@@ -177,7 +175,6 @@
     width: 100%;
 }
 
-/* Mobile styles */
 @media (max-width: 968px) {
 
 
@@ -188,8 +185,8 @@
     .landingTexts {
         margin: 0 auto;
         width: 100%;
-        right: 0; /* Center text on small screens */
-        top: 60px; /* Adjust top positioning */
+        right: 0;
+        top: 60px; 
     }
 
     .landingTexts h1, .landingTexts p{
@@ -230,7 +227,7 @@
     }
 
     .getStartedButton {
-        padding: 12px 30px; /* Adjust button size for mobile */
+        padding: 12px 30px;
         font-size: 0.9rem;
     }
 }
