Font updates across site

--- a/prospera/src/App.css
+++ b/prospera/src/App.css
@@ -1,11 +1,14 @@
+@font-face {
+    font-family: headerFont;
+    src: url('././assets/Skrapbook.ttf');
+}
 
 .footerSpace{
     height: 238.44px;
 }
-
+  
 h1 {
-    font-family: 'Playfair Display';
-    font-weight: 700;
+    font-family: headerFont;
 }
 
 h2 {
@@ -28,6 +31,15 @@ h3 {
     font-weight: 550;
 }
 
+a.read-more {
+    font-family: headerFont;
+    font-size: 25px;
+}
+
+.leftAboutTextArea span {
+    font-family: headerFont;
+}
+
 label {
     font-family: 'Lato';
     font-weight: 500;
@@ -36,4 +48,15 @@ label {
 .passwordChecklist {
     font-family: 'Lato';
     font-size: 0.9rem;
+}
+
+.teamAbout h2 {
+    font-family: headerFont;
+    text-align: center;
+}
+
+
+.dashboardTitle span {
+    font-family: headerFont;
+    font-size: 35px;
 }
