--- a/prospera/src/Components/Footer/Footer.css
+++ b/prospera/src/Components/Footer/Footer.css
@@ -26,6 +26,11 @@
     flex-direction: column;
 }
 
+.footerLeft p {
+    font-family: headerFont;
+    font-size: 19px;
+}
+
 .footerRight{
     width: 100%;
     display: flex;
