--- a/prospera/src/Components/LandingPage/LandingPage.css
+++ b/prospera/src/Components/LandingPage/LandingPage.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     width: 40%;
-    right: 90px;
+    right: 125px;
     top: 90px;
     gap: 20px;
 }
@@ -168,10 +168,6 @@
     margin: 100px 20px 0 20px;
 }
 
-.read-more {
-    font-family: 'Manrope';
-}
-
 .landingPageContent, #aboutPage {
     position: relative;
     width: 100%;
@@ -192,12 +188,13 @@
         top: 60px; /* Adjust top positioning */
     }
 
-    .landingTexts h1, .landingTexts p{
-        font-size: 1rem;
+    .landingTexts h1{
+        font-size: 29px !important;
     }
 
     .landingTexts p {
         color: #000;
+        font-size: 1rem;
     }
 
     .landingTexts h1 {
@@ -210,6 +207,18 @@
         font-size: 1rem;
         padding: 5px;
         margin-bottom: 40px;
+    }
+
+    .landingSlogan p {
+       margin-top: 20px;
+    }
+
+    .landingSlogan button {
+        margin-bottom: 20px;
+     }
+
+    button.getStartedButton {
+        margin-top: 8px;
     }
 
     .landingImg {
