--- a/prospera/src/Components/LandingPage/LandingPage.css
+++ b/prospera/src/Components/LandingPage/LandingPage.css
@@ -38,7 +38,7 @@
     font-weight: bold;
     margin: 3rem 1rem 0 1rem;
     line-height: 1.2;
-    color: #fff;
+    color: #232323;
     text-align: center;
 }
 
@@ -132,7 +132,7 @@
     display: inline-flex;
     align-items: center;
     text-decoration: none;
-    color: #28666E;
+    color: rgb(156, 81, 202);
 }
 
 .landingCardContainer a .icon {
