--- a/prospera/src/App.css
+++ b/prospera/src/App.css
@@ -34,6 +34,7 @@ h3 {
 a.read-more {
     font-family: headerFont;
     font-size: 25px;
+    color: rgb(215, 119, 215);
 }
 
 .leftAboutTextArea span {
